--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-  <div class="card">
+  <main class="card">
 
     <div class="cardimg">
       <div class="imgViewIconcover"><div class="img"></div></div>
@@ -43,12 +43,12 @@
       <div class="createdby">Jules Wyvern</div> 
     </div>
     
-  </div>
+  </main>
 
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Chezx23</a>.
-  </div>
+  </footer>
 </body>
 </html>
